# jwt+roles/routes/authRoutes.js
@@ -13,4 +13,5 @@ app.get('/showusers', authController.showusers);
 app.get('/showuser/:id', authController.showuser);
 app.post('/createuser', authController.createuser);
 app.delete('/delete/:id',authController.deleteuser);
+app.put('/update/:name', authController.update);
 module.exports = app;
