# jwt+roles/swagger.json
@@ -88,6 +88,36 @@
             }
           }
         } 
+      },
+      "/update/{id}": {
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "ID of user that we want to find",
+            "type": "string"
+          }
+        ],
+        "put": {
+          "summary": "Update user with give ID",
+          "tags": ["login"],
+          "parameters": [
+            {
+              "name": "user",
+              "in": "body",
+              "description": "User with new values of properties",
+              "schema": {
+                "$ref": "#/definitions/signup"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "User is updated"
+            }
+          }
+        }
       }
     },
     "definitions": {
